--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ kubernetes==32.0.1
 langchain==0.3.24
 langchain-community==0.3.22
 langchain-core==0.3.55
+langchain-experimental==0.3.4
 langchain-groq==0.3.2
 langchain-text-splitters==0.3.8
 langsmith==0.3.33
